[gd_scene load_steps=7 format=3 uid="uid://dxpxwij74ak1r"]

[ext_resource type="Script" path="res://Scripts/boogeyman_obs.gd" id="1_6w8am"]
[ext_resource type="Texture2D" uid="uid://cmc0glg57pybl" path="res://Assets/Images/Obstacles/boogeyman/torchlight/torch.png" id="2_qgxhn"]
[ext_resource type="Texture2D" uid="uid://we0hh13ka34w" path="res://Assets/Images/Obstacles/boogeyman/torchlight/torch_acive.png" id="4_28cv5"]
[ext_resource type="Texture2D" uid="uid://dglmyyldgd2rb" path="res://Assets/Images/Obstacles/boogeyman/boogeyman_1.png" id="4_v6lwp"]
[ext_resource type="Texture2D" uid="uid://5b074fgkc522" path="res://Assets/Images/Obstacles/boogeyman/boogeyman_2.png" id="5_ks82l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5exim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_v6lwp")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ks82l")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}]

[node name="boogeyman_obs" type="Node2D"]
script = ExtResource("1_6w8am")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Boogy_run" type="Timer" parent="."]

[node name="Torch" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_qgxhn")

[node name="Area2D" type="Area2D" parent="Torch"]
position = Vector2(-960, -540)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Torch/Area2D"]
polygon = PackedVector2Array(1259, 359, 1220, 338, 1215, 301, 1239, 278, 1287, 272, 1347, 279, 1386, 297, 1380, 354, 1336, 364)

[node name="TorchAcive" type="Sprite2D" parent="."]
visible = false
position = Vector2(125, 200)
texture = ExtResource("4_28cv5")

[node name="RayCast2D" type="RayCast2D" parent="TorchAcive"]
position = Vector2(19, 181)
target_position = Vector2(-2, -360)
collide_with_areas = true
collide_with_bodies = false

[node name="Boogeyman" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_5exim")
animation = &"0"

[node name="Boogey_Area2D" type="Area2D" parent="Boogeyman"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Boogeyman/Boogey_Area2D"]
position = Vector2(-5, 2)
polygon = PackedVector2Array(-83, 182, -169, 202, -222, 234, -240, 289, -198, 338, -111, 346, -15, 351, 123, 345, 194, 331, 270, 302, 289, 238, 247, 198, 165, 188, 37, 182)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Boogy_run" to="." method="_on_boogy_run_timeout"]
[connection signal="mouse_entered" from="Torch/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Torch/Area2D" to="." method="_on_area_2d_mouse_exited"]
